Разные градиентные спуски, точность около 80-85%

--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -6,7 +6,7 @@
       "name": "MNIST.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPokJgy0MVo6qp5cjOwOH8V",
+      "authorship_tag": "ABX9TyPwrgaKFMsBTkDeQ60xD18X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -269,7 +269,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_HtJdSOMUcbW",
-        "outputId": "44809d7c-ccd8-4ccb-e15d-cb9895611bc8"
+        "outputId": "5dd6d5e4-cd93-4f42-8b97-2f85d68ef7b5"
       },
       "source": [
         "batch_size=100\n",
@@ -284,12 +284,12 @@
         "    l0=images[batch_start:batch_end]\n",
         "    l1=relu(np.dot(l0,W01))\n",
         "    dropout_mask=np.random.randint(2,size=l1.shape)\n",
-        "    l1*=dropout_mask\n",
+        "    l1*=dropout_mask*2\n",
         "    l2=np.dot(l1,W12)\n",
         "\n",
         "    error+=np.sum((labels[batch_start:batch_end]-l2)**2)\n",
         "    for k in range(batch_size):\n",
-        "      correct_cnt+=int(np.argmax(l2[k:k+1])==np.argmax(labels[k:k+1]))\n",
+        "      correct_cnt+=int(np.argmax(l2[k:k+1])==np.argmax(labels[batch_start+k:batch_end+k+1]))\n",
         "    l2_delta=labels[batch_start:batch_end]-l2\n",
         "    l1_delta=np.dot(l2_delta,W12.T)*relu2div(l1)\n",
         "    l1_delta*=dropout_mask\n",
@@ -304,44 +304,44 @@
         "      l2=np.dot(l1,W12)\n",
         "      test_error+=np.sum((test_labels[i:i+1]-l2)**2)\n",
         "      test_correct_cnt+=int(np.argmax(test_labels[i:i+1])==np.argmax(l2))\n",
-        "    print('iter: {} test_err: {} test_acc: {} train_err: {} train_acc: {}'.format(j,test_error/float(len(test_images)),test_correct_cnt/float(len(test_images)),error/float(len(labels)),correct_cnt/float(len(labels))   ))   \n"
+        "    print('iter: {} test_err: {} test_acc: {} train_err: {} train_acc: {}'.format(j,test_error/float(len(test_images)),test_correct_cnt/float(len(test_images)),error/float(len(labels)),correct_cnt/(float(len(labels)))   ))   \n"
       ],
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "iter: 0 test_err: 0.9453167752645497 test_acc: 0.3144 train_err: 0.9813704781312237 train_acc: 0.094\n",
-            "iter: 10 test_err: 0.665406447459822 test_acc: 0.7 train_err: 0.6341978802608749 train_acc: 0.155\n",
-            "iter: 20 test_err: 0.6284911015514824 test_acc: 0.7561 train_err: 0.5567713829543737 train_acc: 0.172\n",
-            "iter: 30 test_err: 0.6133780453935295 test_acc: 0.7954 train_err: 0.5091055721682615 train_acc: 0.161\n",
-            "iter: 40 test_err: 0.6375007360699395 test_acc: 0.8096 train_err: 0.48243550635207727 train_acc: 0.168\n",
-            "iter: 50 test_err: 0.6541850496440292 test_acc: 0.8119 train_err: 0.4601990427665663 train_acc: 0.178\n",
-            "iter: 60 test_err: 0.6805699855217097 test_acc: 0.8121 train_err: 0.44966222684373036 train_acc: 0.169\n",
-            "iter: 70 test_err: 0.6996746811787273 test_acc: 0.8149 train_err: 0.43110826849871386 train_acc: 0.175\n",
-            "iter: 80 test_err: 0.7291351983293802 test_acc: 0.8124 train_err: 0.43704487004333503 train_acc: 0.174\n",
-            "iter: 90 test_err: 0.7630552390459217 test_acc: 0.8092 train_err: 0.424297174764125 train_acc: 0.178\n",
-            "iter: 100 test_err: 0.7627297574384334 test_acc: 0.8114 train_err: 0.41854041376424006 train_acc: 0.17\n",
-            "iter: 110 test_err: 0.7630641405347119 test_acc: 0.8115 train_err: 0.4137121827311703 train_acc: 0.168\n",
-            "iter: 120 test_err: 0.7714896568522366 test_acc: 0.8123 train_err: 0.4230064414584246 train_acc: 0.176\n",
-            "iter: 130 test_err: 0.8211448280782033 test_acc: 0.8079 train_err: 0.41271192397329604 train_acc: 0.181\n",
-            "iter: 140 test_err: 0.8240421314871524 test_acc: 0.8069 train_err: 0.41090166501033304 train_acc: 0.175\n",
-            "iter: 150 test_err: 0.8286576322079254 test_acc: 0.804 train_err: 0.4101826027894207 train_acc: 0.178\n",
-            "iter: 160 test_err: 0.8577558152666528 test_acc: 0.805 train_err: 0.39662128800738305 train_acc: 0.18\n",
-            "iter: 170 test_err: 0.8393311678788463 test_acc: 0.8052 train_err: 0.4099198675937567 train_acc: 0.175\n",
-            "iter: 180 test_err: 0.84670100046034 test_acc: 0.8047 train_err: 0.38550926657684814 train_acc: 0.178\n",
-            "iter: 190 test_err: 0.8422814069467924 test_acc: 0.8055 train_err: 0.38328087741183603 train_acc: 0.179\n",
-            "iter: 200 test_err: 0.849590437968896 test_acc: 0.7998 train_err: 0.3992420800334603 train_acc: 0.181\n",
-            "iter: 210 test_err: 0.8348362189644087 test_acc: 0.8029 train_err: 0.3965811762506064 train_acc: 0.176\n",
-            "iter: 220 test_err: 0.8524926570902859 test_acc: 0.7976 train_err: 0.3824584793505853 train_acc: 0.184\n",
-            "iter: 230 test_err: 0.8570368799652007 test_acc: 0.803 train_err: 0.4012938729923558 train_acc: 0.173\n",
-            "iter: 240 test_err: 0.8565738612869931 test_acc: 0.8032 train_err: 0.3875480124535443 train_acc: 0.184\n",
-            "iter: 250 test_err: 0.8578778900426214 test_acc: 0.7992 train_err: 0.37103049657091414 train_acc: 0.177\n",
-            "iter: 260 test_err: 0.8343919713396936 test_acc: 0.8015 train_err: 0.38416916821915364 train_acc: 0.176\n",
-            "iter: 270 test_err: 0.8521057522628281 test_acc: 0.8019 train_err: 0.3811489306943462 train_acc: 0.173\n",
-            "iter: 280 test_err: 0.8407867524530076 test_acc: 0.8057 train_err: 0.3803204162090638 train_acc: 0.162\n",
-            "iter: 290 test_err: 0.8257381355165504 test_acc: 0.805 train_err: 0.3815741715957544 train_acc: 0.18\n",
-            "iter: 299 test_err: 0.8522629735417547 test_acc: 0.804 train_err: 0.3660590314187015 train_acc: 0.179\n"
+            "iter: 0 test_err: 0.813491788077794 test_acc: 0.4074 train_err: 1.2327966608615142 train_acc: 0.17\n",
+            "iter: 10 test_err: 0.5706525290812868 test_acc: 0.7288 train_err: 0.6164222961127107 train_acc: 0.657\n",
+            "iter: 20 test_err: 0.5081162121640259 test_acc: 0.7729 train_err: 0.5338737384320642 train_acc: 0.741\n",
+            "iter: 30 test_err: 0.4799421688513726 test_acc: 0.7849 train_err: 0.49839568080357455 train_acc: 0.761\n",
+            "iter: 40 test_err: 0.46045143124998766 test_acc: 0.7969 train_err: 0.4902320871724891 train_acc: 0.757\n",
+            "iter: 50 test_err: 0.45216149813346584 test_acc: 0.8009 train_err: 0.47616755419530765 train_acc: 0.765\n",
+            "iter: 60 test_err: 0.4423803794145082 test_acc: 0.8025 train_err: 0.4515476526489305 train_acc: 0.803\n",
+            "iter: 70 test_err: 0.43451981356182506 test_acc: 0.8045 train_err: 0.44830331617454183 train_acc: 0.789\n",
+            "iter: 80 test_err: 0.43290240929063994 test_acc: 0.806 train_err: 0.4495925446751689 train_acc: 0.794\n",
+            "iter: 90 test_err: 0.4271941215972077 test_acc: 0.8064 train_err: 0.4260997833276569 train_acc: 0.816\n",
+            "iter: 100 test_err: 0.42464702037684127 test_acc: 0.8052 train_err: 0.4253511092136997 train_acc: 0.796\n",
+            "iter: 110 test_err: 0.424143307288153 test_acc: 0.8061 train_err: 0.4245195007244832 train_acc: 0.809\n",
+            "iter: 120 test_err: 0.41800406618788266 test_acc: 0.8107 train_err: 0.40963059207008873 train_acc: 0.816\n",
+            "iter: 130 test_err: 0.41714724166442085 test_acc: 0.8104 train_err: 0.4061610588811753 train_acc: 0.841\n",
+            "iter: 140 test_err: 0.4174277085918281 test_acc: 0.809 train_err: 0.4174462807951371 train_acc: 0.82\n",
+            "iter: 150 test_err: 0.4204279699475481 test_acc: 0.804 train_err: 0.40214948557802427 train_acc: 0.824\n",
+            "iter: 160 test_err: 0.41676181209395025 test_acc: 0.804 train_err: 0.40668402769547013 train_acc: 0.823\n",
+            "iter: 170 test_err: 0.41662110279243436 test_acc: 0.8058 train_err: 0.40530482281283964 train_acc: 0.835\n",
+            "iter: 180 test_err: 0.4170454023148657 test_acc: 0.804 train_err: 0.407201139045959 train_acc: 0.829\n",
+            "iter: 190 test_err: 0.4142995171307353 test_acc: 0.8032 train_err: 0.3945341315903498 train_acc: 0.829\n",
+            "iter: 200 test_err: 0.4110293949039483 test_acc: 0.8014 train_err: 0.38485271840808616 train_acc: 0.86\n",
+            "iter: 210 test_err: 0.407814845774547 test_acc: 0.8031 train_err: 0.38352237747635565 train_acc: 0.847\n",
+            "iter: 220 test_err: 0.40472989884416977 test_acc: 0.8087 train_err: 0.3800713758190489 train_acc: 0.861\n",
+            "iter: 230 test_err: 0.40856423597506136 test_acc: 0.8083 train_err: 0.38621477331704596 train_acc: 0.838\n",
+            "iter: 240 test_err: 0.4045570032316335 test_acc: 0.8033 train_err: 0.37902371396364465 train_acc: 0.838\n",
+            "iter: 250 test_err: 0.40684723342292006 test_acc: 0.7984 train_err: 0.3765770945135795 train_acc: 0.852\n",
+            "iter: 260 test_err: 0.4082104163402062 test_acc: 0.8059 train_err: 0.38353654215184474 train_acc: 0.853\n",
+            "iter: 270 test_err: 0.4062331419363604 test_acc: 0.8056 train_err: 0.3763385196925407 train_acc: 0.859\n",
+            "iter: 280 test_err: 0.40617355994399656 test_acc: 0.8034 train_err: 0.36475153315641423 train_acc: 0.863\n",
+            "iter: 290 test_err: 0.4015107525529098 test_acc: 0.8075 train_err: 0.3518717024959573 train_acc: 0.861\n",
+            "iter: 299 test_err: 0.3996840293633295 test_acc: 0.8075 train_err: 0.37182852338699834 train_acc: 0.859\n"
           ],
           "name": "stdout"
         }
